--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pandas==1.1.3
 gunicorn>=19.7.1
-plotly>=4.11.0
+plotly==4.12.0
+chart-studio==1.0.0
 dash==0.17.4
 dash-renderer==0.7.2
 dash-html-components==0.6.0
