--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas==1.1.3
-gunicorn>=19.7.1
+pandas
+gunicorn
 plotly==4.12.0
 chart-studio==1.0.0
-dash==0.17.4
-dash-renderer==0.7.2
-dash-html-components==0.6.0
-dash-core-components==0.5.0
+dash
+dash-renderer
+dash-html-components
+dash-core-components
 requests
